# ChangeLog for app-emulation/winetricks
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/winetricks/ChangeLog,v 1.19 2013/04/28 05:09:03 tetromino Exp $

*winetricks-949 (28 Apr 2013)

  28 Apr 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  -winetricks-941.ebuild, +winetricks-949.ebuild:
  Version bump; drop old.

*winetricks-947 (31 Mar 2013)

  31 Mar 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  -winetricks-939.ebuild, +winetricks-947.ebuild:
  Bump with Flash updates and .NET fixes. Drop old.

*winetricks-941 (18 Feb 2013)

  18 Feb 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  -winetricks-935.ebuild, +winetricks-941.ebuild:
  Version bump; drop old.

*winetricks-939 (02 Feb 2013)

  02 Feb 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  -winetricks-931.ebuild, +winetricks-939.ebuild:
  Version bump, drop old.

*winetricks-935 (19 Jan 2013)

  19 Jan 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  -winetricks-927.ebuild, winetricks-931.ebuild, +winetricks-935.ebuild,
  winetricks-99999999.ebuild:
  Version bump, drop old. Silence QA messages about Wine category in .desktop
  file (bug #451552, thanks to Ilya Gordeev and Michael Palimaka).

*winetricks-931 (06 Jan 2013)

  06 Jan 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  -winetricks-922.ebuild, +winetricks-931.ebuild:
  Bump, drop old.

*winetricks-927 (08 Dec 2012)

  08 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  -winetricks-920.ebuild, +winetricks-927.ebuild:
  Bump, drop old.

*winetricks-922 (24 Nov 2012)

  24 Nov 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  -winetricks-916.ebuild, +winetricks-922.ebuild, winetricks-99999999.ebuild:
  Version bump. Use 'Wine' as the category for the .desktop file since our
  >=wine-1.5.18 now provides applications-merged/wine.menu (bug #438806).

*winetricks-920 (09 Nov 2012)

  09 Nov 2012; Alexandre Rostovtsev <tetromino@gentoo.org>