@@ -1,24 +1,24 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST winetricks-947 618224 SHA256 2eda58426b2f11bb1ee444e5dde596b0ceb16c9471947b4ef15d820059ff3954 SHA512 2dda811985b4f7ed801db3739d7911b45e6ac9809e68cdeb81920ad49b1a7b900f347babae64b199118a0c0add2d23502aca4d7f79409b9972bc1cf66f0a9ed4 WHIRLPOOL 7fe91ebad58e1c823527d7d59d00f888b9e71fa4197b3a11f34921e427e041bd488436ef2e8ae5ba645a05800b14e6da4d90d8a566161fb24319a0587f58f7a5
-DIST winetricks-947.1 3469 SHA256 f522f4c991194cbed1044182ca6fbbb7645cd4b98d9557ab7d073ace1af4738d SHA512 2c832a9cc4286f641aeed7a5a47131773b48dd0cf123798f753ffb24799dabca29986b2b740698fbe9efb8034ac874a18147c6bd645bea8e69fdb42f1437fdf2 WHIRLPOOL 0ccb982022189b4d2e134756cadbca3628c33e57be6879b07e84f99182ed5a201379413a32af5d689744b4d7527f6abf56aae7113f34401c4cbe62b902462424
 DIST winetricks-949 618264 SHA256 386c9ae4850179ad22b775f7738c09d2e955e7e527f0c960219b4552145e0871 SHA512 56acda21da21f426b3738e85070e2dfa2c631bcb7c66e68fc3fe84d2a864f62df07b720bdc42358c010ce760ca268f9d99250c9f1c640e67b10d2ea91b75cee3 WHIRLPOOL d6b9091fd0ca8a753c250aa197c36b24cb3ba745afbc5ab893ef017a893cf35086c67672601c33e4791fa972c8c9a1cfaf16766b4c410e21472e5757312d209f
 DIST winetricks-949.1 3469 SHA256 f522f4c991194cbed1044182ca6fbbb7645cd4b98d9557ab7d073ace1af4738d SHA512 2c832a9cc4286f641aeed7a5a47131773b48dd0cf123798f753ffb24799dabca29986b2b740698fbe9efb8034ac874a18147c6bd645bea8e69fdb42f1437fdf2 WHIRLPOOL 0ccb982022189b4d2e134756cadbca3628c33e57be6879b07e84f99182ed5a201379413a32af5d689744b4d7527f6abf56aae7113f34401c4cbe62b902462424
+DIST winetricks-952 618409 SHA256 2f2b998ec77619ff7a022dc5ef80bc16ca4c5d53fed613233857c6794bf6a314 SHA512 8aaece9358960a95984fb4c410635535ede6bc78d3021f970994870ef85434ff81f01e53ceabbfa328e69fd5e6fa653f950cf8f1c4d657bc6fcbf327a0eae118 WHIRLPOOL b6d0c5ffd68f51fc929376d3dcdc5a70fc33de9322a65804b8fa1bb1f4f14a89177ff4377e537bd11818248dd0e076f071dbbc5a71705d949b343ca876ac29d6
+DIST winetricks-952.1 3469 SHA256 f522f4c991194cbed1044182ca6fbbb7645cd4b98d9557ab7d073ace1af4738d SHA512 2c832a9cc4286f641aeed7a5a47131773b48dd0cf123798f753ffb24799dabca29986b2b740698fbe9efb8034ac874a18147c6bd645bea8e69fdb42f1437fdf2 WHIRLPOOL 0ccb982022189b4d2e134756cadbca3628c33e57be6879b07e84f99182ed5a201379413a32af5d689744b4d7527f6abf56aae7113f34401c4cbe62b902462424
 DIST winetricks-gentoo-2012.11.24.tar.bz2 6398 SHA256 dded8c294cc5c2e71e4a5d1531ab165178cf3d2d1d890d0656368c2e499bfeb9 SHA512 59c93b73f3a7b2d11aefcde2ff66659ff1de21ad4b5f232f4b60572f3a48b15a6c49f369b1696862bf1b33fde190bf5598945e9536fb41ddec42d8def4d2be2a WHIRLPOOL 268da9e06712a678fbbcfff8eac1fca364b5e46f0a9c48a591eb88f03260b1a55f203eb2908bfe1f0a534b77c866127ff6f7049b0e43fe8abeaaa26fe55de75b
-EBUILD winetricks-947.ebuild 1988 SHA256 5829fe9ea7b759e80ea2bab8d651e26c2e6bc5bbf31e77d058e8f345a6f1ee21 SHA512 39069915f28bcc184073bdab2294ae05eaba40655d99f84227abdcd1912fb2d36245f09cdf739ede203702d7278c7c19e4b8f24ab0b6bc5ec4f0572c2a6376d0 WHIRLPOOL c2844e0e6edaa6039bfcf5f5e525bb4b45eee9a0a5df524f7db0f02fb6cdb24ddcc7fb2be4942bb82f12462c19c7980225a621256181870183eb07610afa16f2
 EBUILD winetricks-949.ebuild 1988 SHA256 02542161bc1bf39e380651515d03fc9afea88eb29f40474e8eaacce9ef5620fe SHA512 ad976fd7a9083b3f5269008b813cf78b61d76fc74f64a2b541ec5796d8095d34bb47dce867d4bf44db750fdb2a4050c59d6282bba9804d55743d239d4afca856 WHIRLPOOL 86cb97d4c6ecfcebc1dd0a306a5e0033e5f7e0ce26d20f58a4930b5cf612ca87c0b87acd9e75dd493b515d3a27af421527d58c2e90fc5da01e1896bb3ad39074
+EBUILD winetricks-952.ebuild 1988 SHA256 cdcb953ba331dbaf5972a40651d8aca532d8914b77175272bb427155395c6d20 SHA512 8d8d4a7ffd47cf44edde72990a64924ec6960907c19f6382011b7c96d3d3719224ebf8de39a618610bec74fb1400edcc18371ed6c1828033529422a896dec7d8 WHIRLPOOL ceba3efb97d54e8935dc1fa9984afa708abd3b0d43134d6223eab9fcfdb78276956002eac6526b95f566ba3a2c18d52e8f722a7591fab016985bf465dce10b90
 EBUILD winetricks-99999999.ebuild 1993 SHA256 9d8a3bd2b476dcbb7e03a6e8a5a50a8dd890e82d2ce7d0ce3451370a597da74a SHA512 bd1c2dd2466dd408e5425738ecd8f0ffb9f679edf22b838396d1a514eeb514e92e8df571ce1adc33fc17c76b9e9b7386eca3658b5bba98faa7e83aa98f619823 WHIRLPOOL 6a12fbf240043c647545c2a71a461b713438d3882afb63f2c0990f2d2245acfd0476e42c0fa8e991de51420ae9064a5458c912506820f5d68a8a9a6af18ebee2
-MISC ChangeLog 4127 SHA256 f76e33789e7b0235cad681c7177f88fb9ed59d137bac9cdf41eabbecbab91612 SHA512 0f1ed364276bfd2ef84314f1463d0aea501cf773f83b06d2ce3b3425d63930ef0a70a36df9de5006dcf62e1c5f9ba0b57e69ab481aedbb1a020e7cd583455749 WHIRLPOOL 645e8dd6db5c21d28c3906980bf388f88a97e594b38b83d5c97355cdc5914765a2cee5bb0f0ecc1c112cef704b13863546d56c0cf1158aa644e009f085a59b93
+MISC ChangeLog 4321 SHA256 a057685708271716941521fd22ce35f51f094eea61677a8367e2a901d78cf226 SHA512 b1020f5ba4e0d6f575a2f866fddce9297ea04d6b30c323b63ef793d38d5d2ea547007b8cbb9dcb0d853a21be33eb18e4f5998bd657ffe346268754fc9d03ce1b WHIRLPOOL 663303b4221018b8e43c4008ec624a5988e14729b625ebcb7e9c12d02d370dbe7224c307ad7d481052d9a35a869b946839fea5688d43687293a5e33495dd18f5
 MISC metadata.xml 238 SHA256 89eb94f543aa923d1627ce6ad4b70039815f7d01d795beb58a8f9a1c7de97252 SHA512 17e2bfa0f3b04f33b520be8ce9892a8c11fe027178a1315b2b48d3268296d4f017890bcdcc2a25f1dbd6acad78ef47924679aa5c87d4c3c66f65bf1b03bbeafc WHIRLPOOL 8ebb3ae5a0560a7cbccd13183d6d5fcb3a7afcf2ddbca0c7d224d0951f5223a6ac53c9f7bb7cce5583e257cf4b6a94b0e710c98bec00a57f042c3568ee4274f9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRfK7wAAoJEJ0WA1zPCt1hxOwIAKilj2q7t+dRGAy2NntofuNi
-X8jbWmkrNTEhk910Dmj287PNl1GEXyYS+Skjmm0LCGGnZXmgmKsnpB0HC5DkJjnm
-xj9CNUpSm2oSDOWlu5ELgaQR7jVNu+HdWaIbW2af0fS0PMwsgB+TEnYyCWSSLl4N
-XVnVn7PM88/oliZMIxl6UZ9If7M2o7tjSRzr0QPKzJjcfHiCQrH4qys8ezWHRLD/
-atLJdx6eN/zXz+OejfHaMa+eZ6HIv3xf26WxbsbySm3Wshjz3tlOh2OxNRizsYdv
-vxBWEdVLffvqUcTwFkCMiDEBk3f1F14i5q44Oe0OAYlSWlYXKupgdU2PE7mCyeY=
-=RaFl
+iQEcBAEBCAAGBQJRkFRaAAoJEJ0WA1zPCt1huZAIALjCPhGUYk21qTsdkVWIne7K
+HhvU0d2bvhZE41kQp57OwJzK3cNBnPbUXULb1/NgZZbgOs7MlM5mP4J7/s+/jYW9
+0BU84KXUUiUaWosnRIxEXCV6fiElyF+3t66Z+UairedFhYFqhhEyLR7XHgZ4OB/D
+FUO3MRJ5FhfdyZ/cNM+c6S0ag7ba/T9gFxGtKeUshZH9bb0k4okYQt8puS9Y3JY7
+ZCKvsBHFHGEcomXmdwxFqh6Wwh3wCdcVJ6U1bMrNFPWEmSwFrlIMrCEIe05txl4K
+T7PBSjLjakhNw5UYiXiMDdKnjx1chycUKxZKKJkMqDKPZbou+yptYHuEUjb4KVU=
+=Yu3A
 -----END PGP SIGNATURE-----
